--- a/Css/style_index.css
+++ b/Css/style_index.css
@@ -2,7 +2,7 @@ html{
     box-sizing: border-box;
 }
 *,
-*::after,
+*::before,
 *::after{
     margin: 0%;
     padding: 0%;
@@ -11,25 +11,83 @@ html{
 body{
     background: rgba(35,28,220,30%);
     height: 100%;
+    
+    
 }
-body div{
+.content_center{
     position: absolute;
-    background: rgba(35,28,220,30%);
+    width: 60%;
+    height: 85%;
+    background-color: green;
     top: 0%;
     right: 0%;
     left: 0%;
     bottom: 0%;
     margin: auto;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     font-size: 70px;
     font-style: bold;
     font-family: 'Opens',sans-serif;
 }
-div{
-    width: 300px;
-    height: 300px;
+/* HOME         */
+.content_home_all{
+    display: flex;
+    background: yellow;
+    width: 40%;
+    height: 100%;
 }
-
+.box1{
+    width: 100%;
+    height: 70%;
+    background-color: blue;
+    
+    display: flex;
+}
+.box2{
+    width: 100%;
+    height: 30%;
+    background-color: orange;
+    
+}
+.content_home{
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    position: relative;
+}
+.home{
+    width: 100%;
+    height: 100%;
+    background-image: url("/Img/home.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/* EVENTO CLICK ESTILOS DEL DIV*/
+.evento_click{
+    position: absolute;
+    width: 100%;
+    /* height: 100%; */
+    min-height: 100%;
+    top: 0;
+    /*background: rgba(0,0,0,50%);*/
+    display: flex;
+    flex-wrap: wrap;
+}
+.evento_click div{
+    width: 50%;
+    height: 288px;
+    /*border: 1px solid black;*/
+}
+/* CONTENEDOR DEL ARRAY STYLOS */
+.content_array_img{
+    margin-left: 1em;
+    background-color: blueviolet;
+}
+/* CONTENEDOR DEL ARRAY 2 ESTILOS */
+.content_array_2{
+    margin-top: 1em;
+    background-color: blueviolet;
+    display: flex;
+}
 
